# equidade-data-package

./: .gitignore  CHANGELOG.md  DEPLOY_AUTOMATION.md  LICENSE  PATCH_EXISTING_WORKFLOWS.md  QUICKSTART.md  README.md  SETUP_CHECKLIST.md  SETUP_SECRETS.md  TECHNICAL_REFERENCE.md  UPDATE_GUIDE.md  commit_all_workflow_changes.py  commit_all_workflow_changes.sh  pyproject.toml  sync_and_commit_workflows.py  test_env_loader.py  update_all_deploy_workflows.py  update_all_deploy_workflows.sh
.github/workflows/: .workflow-diagram.md  FILES_OVERVIEW.md  example-cloud-function-workflow.yml.example  trigger-deploys.yml
equidade_data_package/: __init__.py
equidade_data_package/aws/: __init__.py  parquet_loader.py
equidade_data_package/config/: __init__.py  env_loader.py
equidade_data_package/env-files/: env-shared.yaml
equidade_data_package/gcp/: __init__.py  bigquery.py  drive.py  storage.py
equidade_data_package/utils/: __init__.py
examples/: README.md  cloud_function_example.py  local_development.py  migration_guide.md
scripts/: README.md  manage-repos.sh  patch-workflows.sh  release.sh
